# ebook-organiser

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  prompt.rs  sorter.rs
src/parsers/: audiobook.rs  epub.rs  metadata.rs  misc.rs  mobi.rs  mod.rs
