[package]
name = "ebook-organiser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
epub = "2.1.4"
formatx = "0.2.4"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.10"
dirs = "5.0.1"
mobi = "0.8.0"

[dev-dependencies]
rand = "0.8.5"
